<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/geoguesser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/textbox_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/geoguess_game"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@android:color/black" />

    </FrameLayout>

    <Button
        android:id="@+id/check_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FFC107"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="@+id/next_question_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/nextQuestionButton"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/question_frame"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/end_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/endGameButton"
        app:layout_constraintBottom_toBottomOf="@+id/question_frame"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/question_frame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <TextView
            android:id="@+id/game_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/geoguesser_rule"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_text" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/question_frame"
        android:layout_width="205dp"
        android:layout_height="265dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout55"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/questionText"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/map_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/frameLayout2">

        <ImageView
            android:id="@+id/map_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bulgaria_maps" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/pin1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="90dp"
                android:background="@drawable/pin"
                android:text="@string/pin1"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="440dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/pin"
                android:text="@string/pin2"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/pin"
                android:text="@string/pin3"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="-140dp"
                android:background="@drawable/pin"
                android:text="@string/pin4"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="280dp"
                android:layout_marginTop="-130dp"
                android:background="@drawable/pin"
                android:text="@string/pin5"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="470dp"
                android:layout_marginTop="-80dp"
                android:background="@drawable/pin"
                android:text="@string/pin6"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="270dp"
                android:layout_marginTop="155dp"
                android:background="@drawable/pin"
                android:text="@string/pin7"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="-130dp"
                android:background="@drawable/pin"
                android:text="@string/pin8"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/pin9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="380dp"
                android:layout_marginTop="-140dp"
                android:background="@drawable/pin"
                android:text="@string/pin9"
                android:textColor="@android:color/transparent"
                android:button="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RadioGroup>

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" /> <!-- 30% of the width -->

    <FrameLayout
        android:id="@+id/frameLayout55"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="top"
            android:background="@android:color/black" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

