<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EntryModule.MainActivity"
    android:backgroundTint="@color/custom">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/hamburger_spinner"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/hamburger_menu"/>


        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mainScreenHeader"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Username TextView -->
    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/poppinsbold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- ScrollView for GridLayout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Category: Quizzes -->
            <TextView
                android:id="@+id/quizTitle"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/categoryQuizes"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="35sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <GridLayout
                android:id="@+id/quizzes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:orientation="horizontal"
                android:padding="16dp">
                <!-- Quizzes go here -->

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="4dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@android:color/black">

                        <ImageButton
                            android:id="@+id/art_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/art" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/art"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>

                <!-- Geography Category -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="4dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@android:color/black">

                        <ImageButton
                            android:id="@+id/nature_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/nature" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/nature"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="4dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@android:color/black">

                        <ImageButton
                            android:id="@+id/culture_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/culture" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/culture"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="4dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@android:color/black">

                        <ImageButton
                            android:id="@+id/history_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/history" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/history"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>
            </GridLayout>

            <!-- Category: Games -->
            <TextView
                android:id="@+id/gameTitle"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:letterSpacing="1"
                android:text="@string/categoryGames"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="35sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <GridLayout
                android:id="@+id/games_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:orientation="horizontal"
                android:padding="16dp">
                <!-- Games go here -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="4dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@android:color/black">

                        <ImageButton
                            android:id="@+id/tictactoe_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/tictactoe" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/tictactoe"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="4dp"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@android:color/black">

                        <ImageButton
                            android:id="@+id/geoguesser_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/geoguessr" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppinsbold"
                            android:text="@string/geoguessr"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>
            </GridLayout>

            <TextView
                android:id="@+id/socialMediaTitle"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/socialMediaAccounts"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/facebook"
                android:layout_marginEnd="20dp"/>

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_gravity="center"
                android:src="@drawable/insta" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/twitter" />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/footer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorAccent"
                android:padding="16dp"
                android:gravity="center_horizontal">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
